2003-10-21  Wouter van Heyst <wouter@vidicode.nl>

	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Correct text
	describing mismatched formats involving the Maverick FP type.

2003-10-21  Anil Paranjpe  <anilp1@KPITCummins.com>

	* binary.c (binary_object_p): Pass machine flag along with
	architecture.

2003-10-21  Thorsten Brehm  <brehm@gmx.net>

	* archures.c (bfd_default_scan): Add support for mcf528x.
	* ieee.c (ieee_write_processor): Likewise.

2003-10-21  Peter Barada  <pbarada@mail.wm.sps.mot.com>
            Bernardo Innocenti  <bernie@develer.com>

	* archures.c: Add MCF528x (MCFv4) support.
	* bfd/cpu-m68k.c (arch_info_struct): Likewise.
	* bfd-in2.h: Regenerate.

2003-10-20  Andrew Cagney  <cagney@redhat.com>

	* targets.c: Replace "struct sec" with "struct bfd_section"
	* syms.c, sparclynx.c, section.c, opncls.c: Ditto.
	* libcoff-in.h, libbfd-in.h, elfxx-target.h: Ditto.
	* elf.c, coffgen.c, bfd.c, bfd-in.h, aoutf1.h: Ditto.
	* aout-tic30.c, aout-target.h:
	* bfd-in2.h, libcoff.h, libbfd.h: Regenerate.
	
2003-10-18  Hans-Peter Nilsson  <hp@bitrange.com>

	Support linker relaxation of new R_MMIX_PUSHJ_STUBBABLE relocs.
	* elf64-mmix.c (MAX_PUSHJ_STUB_SIZE): New macro.
	(struct _mmix_elf_section_data): New member pjs.
	(mmix_set_relaxable_size, mmix_elf_get_section_contents): New
	functions.
	(elf_mmix_howto_table): New entry for R_MMIX_PUSHJ_STUBBABLE.
	(mmix_reloc_map): Ditto.
	(mmix_elf_relocate_section): Handle R_MMIX_PUSHJ_STUBBABLE.
	(mmix_final_link_relocate, mmix_elf_check_common_relocs): Ditto.
	(mmix_elf_perform_relocation): Ditto.  Don't mark parameter addr
	unused.
	(mmix_elf_check_relocs): Move early return to after
	mmix_elf_check_common_relocs call.
	(mmix_elf_symbol_processing): Fix cut-and-pasto in head comment.
	(_bfd_mmix_before_linker_allocation): Rename from
	_bfd_mmix_prepare_linker_allocated_gregs.  All referers changed.
	Arrange to set the initial relaxable size of sections.
	(_bfd_mmix_after_linker_allocation): Rename from